Added links on homepage, about page etc

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
 <h1>Hi, this is an about page!</h1>
+
+<%= link_to 'Articles listing', articles_path %>&nbsp|
+<%= link_to 'Go to Homepage', root_path %>
