--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Hi, this is my homepage</h1>
+<h1>Hi, Welcome to my homepage</h1>
+
+<%= link_to 'Articles listing', articles_path %>&nbsp|
+<%= link_to 'About page', about_path %>
