Add bootstrap files and background image for homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
-<h1>Hi, Welcome to my homepage</h1>
-
-<%= link_to 'Articles listing', articles_path %>&nbsp|
-<%= link_to 'About page', about_path %>
+<div id="page-content">
+    <div class="jumbotron container text-center" id="home-container">
+        <h1 class="display-4">First Blog</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-outline-success btn-lg" href="#" role="button">Sign Up!</a>
+    </div>
+</div>
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+  <div class="container text-center">
+    <small>Copyright &copy; <a href="http://mercsoftwares.com" target="_blank">Mercsoftwares.com</a> </small>
+  </div>
+</footer>
