--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,6 @@
 </div>
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
   <div class="container text-center">
-    <small>Copyright &copy; <a href="http://mercsoftwares.com" target="_blank">Mercsoftwares.com</a> </small>
+    <small>Copyright &copy; <%= link_to "MercSoftwares", "http://mercsoftwares.com", class: "text-white" %> </small>
   </div>
 </footer>
