--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,11 @@
-<div id="page-content">
-    <div class="jumbotron container text-center" id="home-container">
-        <h1 class="display-4">First Blog</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-outline-success btn-lg" href="#" role="button">Sign Up!</a>
-    </div>
-</div>
-<footer id="sticky-footer" class="py-4 bg-dark text-white">
-  <div class="container text-center">
-    <small>Copyright &copy; <%= link_to "MercSoftwares", "http://mercsoftwares.com", class: "text-white" %> </small>
+<div class="container" id="home-container">
+  <div class="jumbotron text-center">
+    <h1 class="display-4">First Blog</h1>
+    <p class="lead">
+      Welcome to First Blog. Here, I have tried to create a space for people to come and share their knowledge, ideas, views about anything and everything. 
+    </p>
+    <hr class="my-4">
+    <p id = "subtext">Use this as you wish to and feel free to share the feedback as well.</p>
+    <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
   </div>
-</footer>
+</div>
