Add users create action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       Welcome to First Blog. Here, I have tried to create a space for people to come and share their knowledge, ideas, views about anything and everything. 
     </p>
     <hr class="my-4">
-    <p id = "subtext">Use this as you wish to and feel free to share the feedback as well.</p>
-    <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+    <p id = "subtext">Use this as you wish to and feel free to share the feedback as well.</p>    
+    <%= link_to "Sign Up!", signup_path, class: "btn btn-success btn-lg" %>
   </div>
 </div>
